--- a/Prototype/Prototype/Base.lproj/Main.storyboard
+++ b/Prototype/Prototype/Base.lproj/Main.storyboard
@@ -118,6 +118,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="My Feed" id="6kl-ch-iZc"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="R7Z-2b-QJV">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="refresh" destination="fzi-pd-NTX" eventType="valueChanged" id="Blm-BH-pqQ"/>
